--- a/cc_canele_clicker.html
+++ b/cc_canele_clicker.html
@@ -4,12 +4,14 @@
 	<title>Canelé Clicker</title>
 </head>
 <body>
-	<h1>Canelé Clicker</h1>
-	<img src="C:\Users\adima\Downloads\Mega\Cours\Tuto\Caneles_stemilion.jpg" width="1000px" height="800px"/>
+	
 
+<h1 style= "font-family:Pacifico;" style="color:#5f021f;">Canelé Clicker</h1>
+	<img id="compte-plus" src="C:\Users\adima\Downloads\Mega\Cours\Tuto\cc_canele_clicker\Caneles_stemilion.jpg" width="800px" height="800px"/>
 	<p>
-		<b>Vous avez 0 canelés</b>
-		<button name="Cuisiner" > Cuisiner </button>
+		<div style="color:#a47"> Vous avez <span id="compteur">0 canelés</span></div>
+
+		<button style="font-family:Neucha" name="Cuisiner" > Cuisiner </button>
 		<button name="Four" disabled="button"> Acheter un four (25 canelés) </button>
 	</p>
 		
